Added few fixes

--- a/new/index.html
+++ b/new/index.html
@@ -164,7 +164,7 @@
 							</div>
 						</div>
 						<div class="project-info">
-							<div class="cancel" onclick="cancel(event)">
+							<div title="Click to go back to projects" class="cancel" onclick="cancel(event)">
 								<img src="images/x.png" alt="Go Back">
 							</div>
 							<div class="project-info-container">
