--- a/new/index.html
+++ b/new/index.html
@@ -463,11 +463,11 @@
 						</form>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 contact-info">
-						<p> Feel free to send me a message if you have any questions about my experience and <a id="goto" href="#work" onclick="changeContent(event)">work</a>,
+						<p> Feel free to send me a message at if you have any questions about my experience and <a id="goto" href="#work" onclick="changeContent(event)">work</a>,
 						or if you simply need a freelancer specializing in <b>iOS Development</b> and some <b> design</b>.
 						You can also contact me should you feel my <a id="goto" href="#notes" onclick="changeContent(event)">notes</a> are lacking material or are factually incorrect!
 						If you want a more personal connection point, you can always visit any of my social media as listed at 
-						the bottom of this page. I look forward to hearing from you! </p>
+						the bottom of this page. I can also be directly reached at jcherian@g.ucla.edu. I look forward to hearing from you! </p>
 					</div>
 				</div>
 				<div id="foryou" class="foryou">
