--- a/new/index.html
+++ b/new/index.html
@@ -81,16 +81,16 @@
 					<p> Indian born, Dubai raised, British taught, American schooled… I am a multi-cultured and world travelled <b>computer science major</b> currently in my <b>third year</b> at <b>UCLA</b>.<br>
 					In my journey through the road of 1’s and 0’s I have found that the true power of a computer scientist lies in the ability to shape reality and transform the future all while sitting behind the screen of a 13-inch computer. 
 					I have learnt that it is not only the movement of one’s fingers across a sleek keyboard, transcribing code like a conductor directs a musical masterpiece, 
-					but also the ability to convey my ideas and share my experiences and learnings that allows me to help shape the lives around me for the better.<br>
+					but also the ability to convey my ideas and share my experiences and learnings that allows me to help shape the lives around me for the better.<br><br>
 					As an avid <b>iOS developer</b> and ambitious <b>systems programmer</b>, I hope to use my skills in the field of software engineering to guide people and 
 					companies to a higher level. I have worked with several people to bring about some impactful applications, and have worked with well reputed companies like 
-					<a href="http://www.autodesk.com/" target="_blank">Autodesk</a> to help push the boundaries of existing products.<br>
+					<a href="http://www.autodesk.com/" target="_blank">Autodesk</a> to help push the boundaries of existing products.<br><br>
 					But my passion doesn’t stop at the intricacies of computer science, they continue to flow into the field of art through the form of <b>graphic design and illustration</b>. 
 					Working through <b>Sketch</b> I use my intuition and gut feeling to design the best possible UI/UX that goes into my apps, and follow through by creating 
-					the graphics that truly resonate with who I am. <br>
+					the graphics that truly resonate with who I am. <br><br>
 					These are my passions, but what are passions if we don’t try and share them with the world… Throughout my schooling journey and beyond, I have always chosen 
 					to <b>teach what I have learnt</b> as best as I could to those willing to learn. As the <b>tutoring chair</b> for both <b>Tau Beta Pi</b> and 
-					<b>Upsilon Pi Epsilon</b> at UCLA, I wish to help those struggling in engineering and computer science find the same love and passion as I have for the field.<br>
+					<b>Upsilon Pi Epsilon</b> at UCLA, I wish to help those struggling in engineering and computer science find the same love and passion as I have for the field.<br><br>
 					If you have reached the end of this brief description of me as a person, then I assume you are interested in working with me or meeting me. If so feel 
 					free to explore <a id="goto" href="#work" onclick="changeContent(event)">my work</a> and <a href="../Jahan Kuruvilla Cherian Resume.pdf" target="_blank">resume</a>, 
 					browse my publicly available <a id="goto" href="#notes" onclick="changeContent(event)">notes</a>, and reach out to me through any of my social profiles so that we can do great things together!
