Moved around position of notes changes

--- a/new/index.html
+++ b/new/index.html
@@ -419,7 +419,8 @@
 						a <b>secondary source to your own learnings</b> from your respective classes as each professor’s material varies slightly.
 						If you ever feel like you’re struggling in any classes within the STEM field, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Tutoring%20help" target="_top"> 
 							contact me</a> as a tutor or visit our <a href="https://upe.seas.ucla.edu/tutoring/" target="_blank">UPE</a> and 
-						<a href="http://www.seasoasa.ucla.edu/need-tutoring/" target="_blank">TBP</a> schedules to come to our free weekly tutoring and review sessions!
+						<a href="http://www.seasoasa.ucla.edu/need-tutoring/" target="_blank">TBP</a> schedules to come to our free weekly tutoring and review sessions!<br>
+						Should you have any suggestions to improving my notes, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Notes%20Input" target="_top">leave me a message</a>.
 						</p>
 					</div>
 					<div class="projects row">
@@ -465,7 +466,6 @@
 					<div class="col-xs-12 col-sm-12 col-md-6 contact-info">
 						<p> Feel free to send me a message at if you have any questions about my experience and <a id="goto" href="#work" onclick="changeContent(event)">work</a>,
 						or if you simply need a freelancer specializing in <b>iOS Development</b> and some <b> design</b>.
-						You can also contact me should you feel my <a id="goto" href="#notes" onclick="changeContent(event)">notes</a> are lacking material or are factually incorrect!
 						If you want a more personal connection point, you can always visit any of my social media as listed at 
 						the bottom of this page. I can also be directly reached at jcherian@g.ucla.edu. I look forward to hearing from you! </p>
 					</div>
