Changed wording of note ammendments

--- a/new/index.html
+++ b/new/index.html
@@ -420,7 +420,7 @@
 						If you ever feel like you’re struggling in any classes within the STEM field, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Tutoring%20help" target="_top"> 
 							contact me</a> as a tutor or visit our <a href="https://upe.seas.ucla.edu/tutoring/" target="_blank">UPE</a> and 
 						<a href="http://www.seasoasa.ucla.edu/need-tutoring/" target="_blank">TBP</a> schedules to come to our free weekly tutoring and review sessions!<br>
-						Should you have any suggestions to improving my notes, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Notes%20Input" target="_top">leave me a message</a>.
+						Should you have any suggestions for my notes, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Notes%20Input" target="_top">leave me a message</a>.
 						</p>
 					</div>
 					<div class="projects row">
