Appended Professor prior to Mark Kampe

--- a/new/index.html
+++ b/new/index.html
@@ -444,7 +444,7 @@
 								<div class="projectContent">
 									<a href="http://goo.gl/VQ6ST1" target="_blank"><img src="images/cs111.png" alt="Computer Science 111 Notes"></a>
 								</div>
-								<p class="description"> These are a quarter worth of notes from Mark Kampe's teaching of CS 111 </p>
+								<p class="description"> These are a quarter worth of notes from Professor Mark Kampe's teaching of CS 111 </p>
 							</div>
 						</div>
 					</div>
