Added more content to code and design

--- a/new/index.html
+++ b/new/index.html
@@ -119,6 +119,13 @@
 									<p class="description"> Helping connect humans for humans </p>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> BrainSpace VR</h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/BrainSpace.png" alt="BrainSpace VR">
+									</div>
+									<p class="description"> See and feel the brain like never before </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Lighthouse </h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/Lighthouse.png" alt="Lighthouse">
@@ -154,12 +161,13 @@
 									</div>
 									<p class="description"> Leave messages on maps for others to find </p>
 								</div>
-								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-									<h5 class="projectCell"> BrainSpace VR</h5>
+								<!-- Change this back to col-xs-12 col-sm-6 col-md-4; when more projects are added -->
+								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
+									<h5 class="projectCell"> Time Travel Tycoon</h5>
 									<div class="projectContent">
-										<img onclick="showDetail(event)" src="images/BrainSpace.png" alt="BrainSpace VR">
+										<img onclick="showDetail(event)" src="images/time_travel_tycoon.png" alt="Time Travel Tycoon">
 									</div>
-									<p class="description"> See and feel the brain like never before </p>
+									<p class="description"> Become a billionaire with time</p>
 								</div>
 							</div>
 						</div>
@@ -324,6 +332,30 @@
 									</p>
 								</div>	
 							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>Time Travel Tycoon</h3>
+								</div>
+								<div class="project-media">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/_V2aTiuYLu4" frameborder="0" allowfullscreen></iframe>
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> CryEngine<br>
+									<b>Languages:</b> C++, Lua, Cryengine Flowgraphing<br>
+									<b>Creation:</b> CS188 - UCLA, June 2016 <br>
+									<b>Details:</b><br>
+									Using <a href="https://www.cryengine.com/" target="_blank">CryEngine</a> my teammates and I created an MVP game with Artificial Intelligence mechanisms. The premise of the
+									game was that the player was a man sent back through time to steal the very first iPhone model in order to throw themselves into fame and fortune. The game was built with only a single level to demonstrate its
+									potential. The player is thrown into an environment where they are expected to get through the level either by alerting no guards, or by taking out all the guards in their way to get to the final destination. The score
+									is determined by the speed and efficacy with which the player reached the goal.<br>
+									We programmed the guards to have varying levels of AI using CryEngine's in-built AI mechanisms with slight tweaks of our own, such as giving the guards a proximity sensor based on noise, visibility and distance of the player 
+									to the guard. So the guard would move from standby, to suspicious to alerted mode. The player would be able to hide in a group of employees to detract attention.<br>
+									The game had the ability to be AI controlled based on player performance metrics. Using a weighted function based on the time, targets killed and other factors, we programmed the AI to complete the level achieving the best 
+									score possible. Thus the game would be able to switch from user mode, to AI mode. The video above describes in great detail each of our contributions and the results.
+									A brief report with further links can be found <a href="https://drive.google.com/file/d/0B-13JuAqxdAST2ZqRXlJVUhtTk0/view?usp=sharing" target="_blank">here</a>.
+									</p>
+								</div>	
+							</div>
 						</div>
 					</div>
 					<div id="design" class="design">
@@ -406,6 +438,40 @@
 										<p> While working at Autodesk and staying in Berkeley, CA, I decided to capture my work environment to share with others of interest.
 										As depicted, my table usually remained pretty minimal with the presence of two laptops, two smart watches, my phone, pair of glasses and my 
 										standard headphones. I chose to go with a top down view to make the visual of the technology around me cleaner.</p>
+									</div>
+								</div>
+								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
+									<h5 class="projectCell"> King of the Game</h5>
+									<div class="col-xs-12 col-sm-12 col-md-6 projectContent">
+										<img  src="images/D_8_Card.png" alt="King of the Game">
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-6 description">
+										<p> After a sparse design with the desk, I decided to focus on a smaller object. Playing cards have always been portrayed as having the ability to be aethetically 
+										designed, so I sought out to try and create my own imitation of the King of Spades. The thought pattern for the design of the king's face came from several iterations
+										of a cartoon like portrayal of kings, noticing the hefty beards and majestic crowns. Using this backbone of information, I created the result you see now. This design
+										remains to this date one of my favourite designs due to its simplicity and uniqueness.</p>
+									</div>
+								</div>
+								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
+									<h5 class="projectCell"> In the Rain </h5>
+									<div class="col-xs-12 col-sm-12 col-md-6 projectContent">
+										<img  src="images/D_9_Rain.png" alt="In the Rain">
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-6 description">
+										<p> In this design I tried to create a character of sorts. Looking into my own definition of cute characters, I learnt that big eyes and rounded mouths was the way to go. And so 
+										Jeffrey was born. He's by no means a complex design, nor is he necessarily colourful, but to me he captures the essence of innocence and delicacy that comes to my imagination.
+										I found that placing him within a simple thunderstorm environment would be able to express the very emotions described above.</p>
+									</div>
+								</div>
+								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
+									<h5 class="projectCell"> Unison </h5>
+									<div class="col-xs-12 col-sm-12 col-md-6 projectContent">
+										<img  src="images/World_unite.png" alt="Unison">
+									</div>
+									<div class="col-xs-12 col-sm-12 col-md-6 description">
+										<p> Watching the news and atrocities of all the countries that had suffered so many casualties over the summer, I decided to show my support by creating a very simple
+										design that tried to emphasis the unity of the world behind these countries, and all other countries that had faced so much terror in the wake of the modern century. To this day,
+										I hope that this design can inspire people to accept one another, and unite against common evil.</p>
 									</div>
 								</div>
 							</div>
