--- a/new/index.html
+++ b/new/index.html
@@ -60,7 +60,7 @@
 							</div>
 						</div>
 						<div class="work-contains">
-						<div onclick="switchWorkContent(event)" id="code-nav" class="items sub-items">
+							<div onclick="switchWorkContent(event)" id="code-nav" class="items sub-items">
 								<a href="#code" onclick="return false">
 									<img class="off" src="images/code_img_off.png">
 									<img class="on" src="images/code_img.png">
@@ -71,6 +71,14 @@
 									<img class="off" src="images/design_img_off.png">
 									<img class="on" src="images/design_img.png">
 								</a>
+							</div>
+						</div>	
+						<div class="mobile-nav" style="display:none">
+							<div class="active">
+								<img src="images/about_img.png">
+							</div>
+							<div class="toggle">
+								<img src="images/hamburger.png">
 							</div>
 						</div>	
 					</div>
@@ -271,7 +279,7 @@
 								<div class="project-title">
 									<h3>Doodle Fall</h3>
 								</div>
-								<div class="project-media">
+								<div class="videoWrapper project-media">
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/sCSUT1zrvOE" frameborder="0" allowfullscreen></iframe>
 								</div>
 								<div class="project-details">
@@ -336,7 +344,7 @@
 								<div class="project-title">
 									<h3>Time Travel Tycoon</h3>
 								</div>
-								<div class="project-media">
+								<div class="videoWrapper project-media">
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/_V2aTiuYLu4" frameborder="0" allowfullscreen></iframe>
 								</div>
 								<div class="project-details">
@@ -546,7 +554,7 @@
 						If you enjoyed the video, you can <a id="goto" href="#foryou" onclick="changeContent(event)">refresh</a> to watch some more.
 						</p>
 					</div>
-					<div class="foryou-content">
+					<div class="vidWrapper foryou-content">
 						<iframe id="vidFrame" width="560" height="315" src="https://www.youtube.com/embed/sCSUT1zrvOE" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
