Improving Mobile Version

--- a/new/index.html
+++ b/new/index.html
@@ -73,14 +73,9 @@
 								</a>
 							</div>
 						</div>	
-						<div class="mobile-nav" style="display:none">
-							<div class="active">
-								<img src="images/about_img.png">
+							<div class="toggle" onclick="showAll(event)" style="display:none">
+								<img src="images/hamburger.png" style="width:30px">
 							</div>
-							<div class="toggle">
-								<img src="images/hamburger.png">
-							</div>
-						</div>	
 					</div>
 				</div>
 			</div>
