Added more mobility functions

--- a/new/index.html
+++ b/new/index.html
@@ -74,7 +74,7 @@
 							</div>
 						</div>	
 							<div class="toggle" onclick="showAll(event)" style="display:none">
-								<img src="images/hamburger.png" style="width:30px">
+								<img id="nav" src="images/hamburger.png" alt="Hamburger" style="width:20px">
 							</div>
 					</div>
 				</div>
