Fixed lighthouse issue

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Lighthouse </h5>
 									<div class="projectContent">
-										<img onclick="showDetail(event)" src="images/Lighthouse.png" alt="Lighthouse">
+										<img onclick="showDetail(event)" src="images/lighthouse.png" alt="Lighthouse">
 									</div>
 									<p class="description"> Changing safety one click at a time </p>
 								</div>
