--- a/index.html
+++ b/index.html
@@ -122,13 +122,6 @@
 									<p class="description"> Helping connect humans for humans </p>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-									<h5 class="projectCell"> BrainSpace VR</h5>
-									<div class="projectContent">
-										<img onclick="showDetail(event)" src="images/BrainSpace.png" alt="BrainSpace VR">
-									</div>
-									<p class="description"> See and feel the brain like never before </p>
-								</div>
-								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Lighthouse </h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/lighthouse.png" alt="Lighthouse">
@@ -142,14 +135,13 @@
 									</div>
 									<p class="description"> Filters on LSD </p>
 								</div>
-								<!-- Only release information about the app once live
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-									<h5 class="projectCell"> Quotebook </h5>
+									<h5 class="projectCell"> BrainSpace VR</h5>
 									<div class="projectContent">
-										<img onclick="showDetail(event)" src="images/Quotebook.png" alt="Quotebook">
+										<img onclick="showDetail(event)" src="images/BrainSpace.png" alt="BrainSpace VR">
 									</div>
-									<p class="description"> Remember your loved ones like never before </p>
-								</div>-->
+									<p class="description"> See and feel the brain like never before </p>
+								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Doodle Fall </h5>
 									<div class="projectContent">
@@ -165,13 +157,28 @@
 									<p class="description"> Leave messages on maps for others to find </p>
 								</div>
 								<!-- Change this back to col-xs-12 col-sm-6 col-md-4; when more projects are added -->
-								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
+								<div class="col-xs-12 col-sm-6 col-md-6 projectCell">
 									<h5 class="projectCell"> Time Travel Tycoon</h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/time_travel_tycoon.png" alt="Time Travel Tycoon">
 									</div>
 									<p class="description"> Become a billionaire with time</p>
 								</div>
+								<div class="col-xs-12 col-sm-6 col-md-6 projectCell">
+									<h5 class="projectCell"> Autodesk </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/autodesk.png" alt="Autodesk">
+									</div>
+									<p class="description"> Working on enhancing the AutoCAD experience </p>
+								</div>
+								<!-- Only release information about the app once live
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Quotebook </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/Quotebook.png" alt="Quotebook">
+									</div>
+									<p class="description"> Remember your loved ones like never before </p>
+								</div>-->
 							</div>
 						</div>
 						<div class="project-info">
@@ -356,6 +363,26 @@
 									The game had the ability to be AI controlled based on player performance metrics. Using a weighted function based on the time, targets killed and other factors, we programmed the AI to complete the level achieving the best 
 									score possible. Thus the game would be able to switch from user mode, to AI mode. The video above describes in great detail each of our contributions and the results.
 									A brief report with further links can be found <a href="https://drive.google.com/file/d/0B-13JuAqxdAST2ZqRXlJVUhtTk0/view?usp=sharing" target="_blank">here</a>.
+									</p>
+								</div>	
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>Autodesk</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/autodesk-intern.jpg" alt="Autodesk">
+								</div>
+								<div class="project-details">
+									<p> <b>Product:</b> AutoCAD<br>
+									<b>Platform:</b> Visual Studio <br>
+									<b>Languages:</b> C++<br>
+									<b>Period:</b> June 2016 - September 2016 <br> 
+									<b>Details:</b><br>
+									Worked to implement an effective and platform independent serialization mechanism, leveraging JSON, to create an Inter Process Communication channel. This project was built as a workable unit test integrated into AutoCAD
+									with code written to be readily extensible. The serialization involved taking low level graphics calls and packaging them into a custom built messaging schema, to eventually communicate between a client and server model. <br>
+									Throughout the internship I gained experience in discussing progress and workarounds with professional senior software engineers and software architects. I learnt how to navigate a huge code base of over 9 million lines of code,
+									while learning the conventions for building huge projects. This greatly improved my ability to modularize and componentize projects.
 									</p>
 								</div>	
 							</div>
@@ -588,7 +615,11 @@
 							</a>
 						</div>
 					</div>
+					<div class="made-with">
+						<p> Made by Jahan Kuruvilla Cherian ©</p>
+					</div>
 				</div>
-				<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-			</body>
-		</html>
+			</div>
+			<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		</body>
+	</html>
