Made Autodesk priority

--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
 						<div class="projects row">
 							<div class="project-container">
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Autodesk </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/autodesk.png" alt="Autodesk">
+									</div>
+									<p class="description"> Working on enhancing AutoCAD</p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Future Without Borders </h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/FWB.png" alt="Future Without Borders">
@@ -149,7 +156,7 @@
 									</div>
 									<p class="description"> Play. Arcade Style. </p>
 								</div>
-								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<div class="col-xs-12 col-sm-6 col-md-6 projectCell">
 									<h5 class="projectCell"> Scavenger </h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/Scavenger.png" alt="Scavenger">
@@ -163,13 +170,6 @@
 										<img onclick="showDetail(event)" src="images/time_travel_tycoon.png" alt="Time Travel Tycoon">
 									</div>
 									<p class="description"> Become a billionaire with time</p>
-								</div>
-								<div class="col-xs-12 col-sm-6 col-md-6 projectCell">
-									<h5 class="projectCell"> Autodesk </h5>
-									<div class="projectContent">
-										<img onclick="showDetail(event)" src="images/autodesk.png" alt="Autodesk">
-									</div>
-									<p class="description"> Working on enhancing the AutoCAD experience </p>
 								</div>
 								<!-- Only release information about the app once live
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
