--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta property="og:site_name" content="Jahan Cherian's Website">
+		<meta property="og:site_name" content="Jahan Cherian>
 		<meta property="og:title" content="About Jahan Cherian">
 		<meta property="og:description" content="Learn more about Jahan Cherian">
 		<meta property="og:image" content="images/logo.png">
@@ -10,6 +10,7 @@
 		<meta property="og:type" content="blog">
 		<title> Jahan Cherian's Website </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="images/mini.png" type="image/png"/>
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
