--- a/index.html
+++ b/index.html
@@ -380,10 +380,11 @@
 									<b>Languages:</b> C++<br>
 									<b>Period:</b> June 2016 - September 2016 <br> 
 									<b>Details:</b><br>
-									Worked to implement an effective and platform independent serialization mechanism, leveraging JSON, to create an Inter Process Communication channel. This project was built as a workable unit test integrated into AutoCAD
-									with code written to be readily extensible. The serialization involved taking low level graphics calls and packaging them into a custom built messaging schema. <br>
-									Throughout the internship I gained experience in discussing progress and workarounds with professional senior software engineers and software architects. I learnt how to navigate a huge code base of over 9 million lines of code,
-									while learning the conventions for building huge projects. This greatly improved my ability to modularize and componentize projects.
+									Worked to implement an effective and platform independent serialization mechanism, leveraging JSON, to create an Inter Process Communication channel. 
+									This project was built as a workable unit test integrated into AutoCAD with code written to be readily extensible. The serialization involved taking low 
+									level calls and packaging them into a custom built messaging schema. Throughout the internship I gained experience in discussing progress 
+									and workarounds with professional senior software engineers and software architects. I learnt how to navigate a huge code base consisting of million lines of code
+									, while learning the conventions for building industrial strength projects. This greatly improved my ability to modularize and componentize projects.
 									</p>
 								</div>	
 							</div>
