--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 								</a>
 							</div>
 							<div onclick="changeContent(event)" class="items">
+								<a href="./blog/_posts/" onclick="return false">
+									<img class="off" src="images/blog_off.png">
+									<img class="on" src="images/blog.png">
+								</a>
+							</div>
+							<div onclick="changeContent(event)" class="items">
 								<a href="#contact" onclick="return false">
 									<img class="off" src="images/contact_img_off.png">
 									<img class="on" src="images/contact_img.png">
