--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								</a>
 							</div>
 							<div onclick="changeContent(event)" class="items">
-								<a href="./blog/_posts/" onclick="return false">
+								<a href="./blog/_site/index.html" onclick="return false">
 									<img class="off" src="images/blog_off.png">
 									<img class="on" src="images/blog.png">
 								</a>
