--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 									<img class="on" src="images/notes_img.png">
 								</a>
 							</div>
-							<div onclick="changeContent(event)" class="items">
-								<a href="./blog/_site/index.html" onclick="return false">
+							<div>
+								<a href="./blog/_site/index.html">
 									<img class="off" src="images/blog_off.png">
 									<img class="on" src="images/blog.png">
 								</a>
