--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 									<img class="on" src="images/notes_img.png">
 								</a>
 							</div>
-							<div>
-								<a href="./blog/_site/index.html">
+							<div class="items">
+								<a href="blog/_site/index.html">
 									<img class="off" src="images/blog_off.png">
 									<img class="on" src="images/blog.png">
 								</a>
