--- a/index.html
+++ b/index.html
@@ -550,6 +550,20 @@
 								</div>
 								<p class="description"> These are a quarter worth of notes from Professor Mark Kampe's teaching of CS 111 </p>
 							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Network Fundamentals </h5>
+								<div class="projectContent">
+									<a href="https://goo.gl/TBVqnz" target="_blank"><img src="images/cs118.png" alt="Computer Science 118 Notes"></a>
+								</div>
+								<p class="description"> These are a quarter worth of notes from Professor Lixia Zhang's teaching of CS 118 </p>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Introduction to Algorithms and Complexity</h5>
+								<div class="projectContent">
+									<a href="https://goo.gl/UjYAgY" target="_blank"><img src="images/cs180.png" alt="Computer Science 180 Notes"></a>
+								</div>
+								<p class="description"> These are a quarter worth of notes from Professor Majid Sarrafzadeh's teaching of CS 180 </p>
+							</div>
 						</div>
 					</div>
 				</div>
