Added more work

--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@
 									<p class="description"> Working on enhancing AutoCAD</p>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> LA Hacks</h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/lahacks.png" alt="LA Hacks">
+									</div>
+									<p class="description"> Building the infrastructure for LA Hacks</p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Creative Labs</h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/creativelabs.png" alt="Creative Labs">
+									</div>
+									<p class="description"> iOS Project Lead for Creative Labs</p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Future Without Borders </h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/FWB.png" alt="Future Without Borders">
@@ -163,7 +177,7 @@
 									</div>
 									<p class="description"> Play. Arcade Style. </p>
 								</div>
-								<div class="col-xs-12 col-sm-6 col-md-6 projectCell">
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Scavenger </h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/Scavenger.png" alt="Scavenger">
@@ -171,7 +185,7 @@
 									<p class="description"> Leave messages on maps for others to find </p>
 								</div>
 								<!-- Change this back to col-xs-12 col-sm-6 col-md-4; when more projects are added -->
-								<div class="col-xs-12 col-sm-6 col-md-6 projectCell">
+								<div class="col-xs-12 col-sm-6 col-md-12 projectCell">
 									<h5 class="projectCell"> Time Travel Tycoon</h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/time_travel_tycoon.png" alt="Time Travel Tycoon">
@@ -191,6 +205,50 @@
 						<div class="project-info">
 							<div title="Click to go back to projects" class="cancel" onclick="cancel(event)">
 								<img src="images/x.png" alt="Go Back">
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>LA Hacks</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/lahacksfront.png" alt="LAHacks website front">
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> Web <br>
+									<b>Languages:</b> Javascript (MKRN) <br>
+									<b>Creation:</b> Present <br>
+									<b>Details:</b><br>
+									I am currently working as an organizer on the development team for LAHacks - the annual 36 hour hackathon at UCLA, working on building the foundations of an entire system infrastructure for the future 
+									of LAHacks. My work primarily focuses on the backend development for the current state of the site, to enable people to create accounts and apply
+									for the hackathon from March 31st to April 2nd of 2017. We focused on using the MKRN (Mongo, Koa, React, Node) stack. My major contribution was on 
+									building the user services, controllers and endpoints focusing on resetting passwords and admin privileges, along with some of the tests. As I continue 
+									to work with the rest of the team, I intend on making huge contributions towards more of the backend along with the future projects and ideas we have
+									for the system.<br>
+									The site and the application can be found on the <a href="http://www.lahacks.com" target="_blank">website </a>.
+									</p>
+								</div>	
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>Creative Labs</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/creativelabsfront.png" alt="Creative Labs at work">
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> iOS <br>
+									<b>Languages:</b> Swift <br>
+									<b>Creation:</b> Present <br>
+									<b>Details:</b><br>
+									I am currently on the board for Creative Labs as the iOS Project Lead. In summary, Creative Labs serves as the bridge between designers and developers at
+									UCLA to bring the two disciplines together to build amazing quarter long projects, and give anyone and everyone the opportunity to learn the skills to become either a
+									developer or designer through our weekly workshops and speaker series.<br>
+									As the iOS Project Lead, I have worked with leading a beginners iOS workshop in the Fall of 2016, where I helped 7 students understand the fundamentals of
+									Swift and iOS development through a simple Todo application. This Winter, I intend on leading an advanced iOS project by recruiting about developers and 
+									designers to work on a iOS project from the ground up to release on the App Store.<br>
+									More information can be found on our <a href="http://www.uclacreatives.com" target="_blank">website </a>.
+									</p>
+								</div>	
 							</div>
 							<div class="project-info-container">
 								<div class="project-title">
