Ammended About section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 					These are my passions, but what are passions if we don’t try and share them with the world… Throughout my schooling journey and beyond, I have always chosen 
 					to <b>teach what I have learnt</b> as best as I could to those willing to learn. As the <b>tutoring chair</b> for both <b>Tau Beta Pi</b> and 
 					<b>Upsilon Pi Epsilon</b> at UCLA, I wish to help those struggling in engineering and computer science find the same love and passion as I have for the field.<br>
+					In addition to my teaching endeavours, I love to apply my knowledge into practicalities through various projects and organizations. As such I am an <b>iOS Project Lead</b> and board member at <a href="http://www.uclacreatives.com" target="_blank">Creative Labs</a>,
+					organizing member as a <b>developer</b> at <a href="http://www.lahacks.com" target="_blank">LAHacks</a> and organizing member for 2017 at <a href="http://uclafs.com/" target="_blank">Founder's School</a>.<br>
 					If you have reached the end of this brief description of me as a person, then I assume you are interested in working with me or meeting me. If so feel 
 					free to explore <a id="goto" href="#work" onclick="changeContent(event)">my work</a> and <a href="../Jahan Kuruvilla Cherian Resume.pdf" target="_blank">resume</a>, 
 					browse my publicly available <a id="goto" href="#notes" onclick="changeContent(event)">notes</a>, and reach out to me through any of my social profiles so that we can do great things together!
@@ -224,7 +226,7 @@
 									building the user services, controllers and endpoints focusing on resetting passwords and admin privileges, along with some of the tests. As I continue 
 									to work with the rest of the team, I intend on making huge contributions towards more of the backend along with the future projects and ideas we have
 									for the system.<br>
-									The site and the application can be found on the <a href="http://www.lahacks.com" target="_blank">website </a>.
+									The site and the application can be found on the <a href="http://www.lahacks.com" target="_blank">website</a>.
 									</p>
 								</div>	
 							</div>
@@ -246,7 +248,7 @@
 									As the iOS Project Lead, I have worked with leading a beginners iOS workshop in the Fall of 2016, where I helped 7 students understand the fundamentals of
 									Swift and iOS development through a simple Todo application. This Winter, I intend on leading an advanced iOS project by recruiting about developers and 
 									designers to work on a iOS project from the ground up to release on the App Store.<br>
-									More information can be found on our <a href="http://www.uclacreatives.com" target="_blank">website </a>.
+									More information can be found on our <a href="http://www.uclacreatives.com" target="_blank">website</a>.
 									</p>
 								</div>	
 							</div>
@@ -608,14 +610,14 @@
 								</div>
 								<p class="description"> These are a quarter worth of notes from Professor Mark Kampe's teaching of CS 111 </p>
 							</div>
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+							<div class="col-xs-12 col-sm-6 col-md-6 projectCell">
 								<h5 class="projectCell"> Network Fundamentals </h5>
 								<div class="projectContent">
 									<a href="https://goo.gl/TBVqnz" target="_blank"><img src="images/cs118.png" alt="Computer Science 118 Notes"></a>
 								</div>
 								<p class="description"> These are a quarter worth of notes from Professor Lixia Zhang's teaching of CS 118 </p>
 							</div>
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+							<div class="col-xs-12 col-sm-6 col-md-6 projectCell">
 								<h5 class="projectCell"> Introduction to Algorithms and Complexity</h5>
 								<div class="projectContent">
 									<a href="https://goo.gl/UjYAgY" target="_blank"><img src="images/cs180.png" alt="Computer Science 180 Notes"></a>
