Added small info for Work:Code section

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							along with low-level systems programming. Such knowledge along with Computer graphics, enabled me to work on 
 							graphic call serialization for IPC for AutoCAD at <a href="http://www.autodesk.com/" target="_blank">Autodesk</a>
 							this past summer. In my free time I am an avid <b>iOS developer</b> as showcased by the projects listed below, 
-							and occasionally venture out of my comfort zone and involve myself with <b>VR</b>, <b>game development</b>
+							and occasionally venture out of my comfort zone and involve myself with <b>backend web development</b>, <b>VR</b>, <b>game development</b>
 							and general <b>Python</b> and <b>BASH</b> scripting.<br>
 
 							If my work or skillset interest you, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Working%20together%20" target="_top">contact me</a>!
